# llm-experiments

./: .gitignore  Binary_Classification_Finetuning.ipynb  GEMINI.md  LogProbs_Part2.ipynb  Log_Probs.ipynb  Ollama_Log_Probs_Topic_Classification.ipynb  experiment_snippet.py  hf_languages.ipynb  interactive_explainer.ipynb  logprobs_experiments.ipynb  openai_logprobs.py  openai_logprobs_blogpost.py  phishing_analysis.ipynb  prompt_stability.py  pyproject.toml  synthetic_dataset.csv
part2/: 20260113_193459  anthropic_logprobs.py  determinism_trials.py  gemini_logprobs.py  hugging_face_languages.py  logprobs.py  logprobs_cli.py  ollama_logprobs.py  openai_logprobs.py  random_tests.py  token_explainer.py  try_logprobs.py
part2/samples/: capital-of-netherlands-open-gemini.json
part3/: LogProbsFewShot.ipynb  OOD_Detection.ipynb  Scikit_LLM.ipynb  abstention.py  bug_repro.py  compare_llm_classifiers.py  config_gemini.yaml  config_gemini_low_abstention.yaml  config_ollama.yaml  data_loader.py  evaluation.py  metrics.py  ollama_dynamic.py  prompts.py  teacher_student.py
part3/classifiers/: base.py  instructor_classifier.py  langchain_classifier.py  llamaindex_classifier.py  logprob_dynamic_classifier.py  scikit_llm_classifier.py
samples/: amsterdam.json  quick_brown_fox.json
